# vst3-vban

./: .clang-format  CMakeLists.txt
.github/workflows/: clang-format.yml
resource/: vban_editor.uidesc
source/: audio_buffer.cc  audio_buffer.h  paramids.h  socket.h  vban_cids.h  vban_controller.cpp  vban_controller.h  vban_entry.cpp  vban_processor.cpp  vban_processor.h  vban_processor_thread.cc  version.h
